{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 543,
  "lineage": "50d74c85-0d3b-0df8-5929-56335a951c05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c82541b19eff88f",
            "arn": "arn:aws:ec2:us-east-2:799758650289:elastic-ip/eipalloc-08c82541b19eff88f",
            "association_id": "eipassoc-06e492f2dbc2d30cc",
            "domain": "vpc",
            "id": "eipalloc-08c82541b19eff88f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05e8f7825c1fa3fc3",
            "private_dns": "ip-10-0-1-148.us-east-2.compute.internal",
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-3-23-161-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.161.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-nat-eip",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-nat-eip",
              "Project": "healthcare"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0987d98687fe4578b",
            "arn": "arn:aws:ec2:us-east-2:799758650289:instance/i-0f14a45ed6e9e4e5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "healthcare-dev-ec2-profile",
            "id": "i-0f14a45ed6e9e4e5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e6a7f4109431438",
            "private_dns": "ip-10-0-1-62.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-18-227-48-224.us-east-2.compute.amazonaws.com",
            "public_ip": "18.227.48.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07503e7ab271678f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c58fbfbfc878f6f",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-backend-1",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-backend-1",
              "Project": "healthcare"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c58cc6917fedd0a4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.rds_monitoring",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:internet-gateway/igw-056376d66998869e9",
            "id": "igw-056376d66998869e9",
            "owner_id": "799758650289",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-igw",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-igw",
              "Project": "healthcare"
            },
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:799758650289:loadbalancer/app/healthcare-dev-alb/d9fe969a11c4b58b",
            "arn_suffix": "app/healthcare-dev-alb/d9fe969a11c4b58b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "healthcare-dev-alb-985138781.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:799758650289:loadbalancer/app/healthcare-dev-alb/d9fe969a11c4b58b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "healthcare-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-037c05d5c895becbd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c58fbfbfc878f6f"
              },
              {
                "subnet_id": "subnet-01465d4b54509e4fe"
              }
            ],
            "subnets": [
              "subnet-00c58fbfbfc878f6f",
              "subnet-01465d4b54509e4fe"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-alb",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-alb",
              "Project": "healthcare"
            },
            "vpc_id": "vpc-040897370b94e8b64",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:799758650289:listener/app/healthcare-dev-alb/d9fe969a11c4b58b/4911a39539c13ce1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:799758650289:targetgroup/healthcare-dev-tg/034218a4958d5ff7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:799758650289:listener/app/healthcare-dev-alb/d9fe969a11c4b58b/4911a39539c13ce1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:799758650289:loadbalancer/app/healthcare-dev-alb/d9fe969a11c4b58b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-listener",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-listener",
              "Project": "healthcare"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:799758650289:targetgroup/healthcare-dev-tg/034218a4958d5ff7",
            "arn_suffix": "targetgroup/healthcare-dev-tg/034218a4958d5ff7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:799758650289:targetgroup/healthcare-dev-tg/034218a4958d5ff7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:799758650289:loadbalancer/app/healthcare-dev-alb/d9fe969a11c4b58b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "healthcare-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-tg",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-tg",
              "Project": "healthcare"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:799758650289:targetgroup/healthcare-dev-tg/034218a4958d5ff7-20251114202148422600000009",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:799758650289:targetgroup/healthcare-dev-tg/034218a4958d5ff7",
            "target_id": "i-0f14a45ed6e9e4e5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.rds_monitoring",
            "aws_instance.backend",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c82541b19eff88f",
            "association_id": "eipassoc-06e492f2dbc2d30cc",
            "connectivity_type": "public",
            "id": "nat-01c297771cafe6713",
            "network_interface_id": "eni-05e8f7825c1fa3fc3",
            "private_ip": "10.0.1.148",
            "public_ip": "3.23.161.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c58fbfbfc878f6f",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-nat-gateway",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-nat-gateway",
              "Project": "healthcare"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:route-table/rtb-07f793e5aac0fff47",
            "id": "rtb-07f793e5aac0fff47",
            "owner_id": "799758650289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c297771cafe6713",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-rt-1",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-rt-1",
              "Project": "healthcare"
            },
            "timeouts": null,
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:route-table/rtb-000ed1e03ebea5356",
            "id": "rtb-000ed1e03ebea5356",
            "owner_id": "799758650289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c297771cafe6713",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-rt-2",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-rt-2",
              "Project": "healthcare"
            },
            "timeouts": null,
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:route-table/rtb-05a7033960d1be9b7",
            "id": "rtb-05a7033960d1be9b7",
            "owner_id": "799758650289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056376d66998869e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-public-rt",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-public-rt",
              "Project": "healthcare"
            },
            "timeouts": null,
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d15b15b0d8f1f1df",
            "route_table_id": "rtb-07f793e5aac0fff47",
            "subnet_id": "subnet-01bfc8f7eba84951b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b49ebdfd1a1eaa",
            "route_table_id": "rtb-000ed1e03ebea5356",
            "subnet_id": "subnet-0c5fdbcf7c8934412"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037ab54c228194cd9",
            "route_table_id": "rtb-05a7033960d1be9b7",
            "subnet_id": "subnet-00c58fbfbfc878f6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0068b38cd5d25fd34",
            "route_table_id": "rtb-05a7033960d1be9b7",
            "subnet_id": "subnet-01465d4b54509e4fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:security-group/sg-037c05d5c895becbd",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c05d5c895becbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "healthcare-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "799758650289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-alb-sg",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-alb-sg",
              "Project": "healthcare"
            },
            "timeouts": null,
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:security-group/sg-0c58cc6917fedd0a4",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c58cc6917fedd0a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend App Direct Access (for testing)",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Backend App from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037c05d5c895becbd"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037c05d5c895becbd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "healthcare-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "799758650289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-ec2-sg",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-ec2-sg",
              "Project": "healthcare"
            },
            "timeouts": null,
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:security-group/sg-0d7ead9d4806f0f2c",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7ead9d4806f0f2c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c58cc6917fedd0a4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "healthcare-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "799758650289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-rds-sg",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-rds-sg",
              "Project": "healthcare"
            },
            "timeouts": null,
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:subnet/subnet-01bfc8f7eba84951b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bfc8f7eba84951b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "799758650289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-subnet-1",
              "Project": "healthcare",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-subnet-1",
              "Project": "healthcare",
              "Type": "Private"
            },
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:subnet/subnet-0c5fdbcf7c8934412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5fdbcf7c8934412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "799758650289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-subnet-2",
              "Project": "healthcare",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-private-subnet-2",
              "Project": "healthcare",
              "Type": "Private"
            },
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:subnet/subnet-00c58fbfbfc878f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c58fbfbfc878f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "799758650289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-public-subnet-1",
              "Project": "healthcare",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-public-subnet-1",
              "Project": "healthcare",
              "Type": "Public"
            },
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:subnet/subnet-01465d4b54509e4fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01465d4b54509e4fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "799758650289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-public-subnet-2",
              "Project": "healthcare",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-public-subnet-2",
              "Project": "healthcare",
              "Type": "Public"
            },
            "vpc_id": "vpc-040897370b94e8b64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:799758650289:vpc/vpc-040897370b94e8b64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae515f27b312fb27",
            "default_route_table_id": "rtb-068fd24789230307f",
            "default_security_group_id": "sg-0ec68e05834316d30",
            "dhcp_options_id": "dopt-034ac4dbd8e5d96c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040897370b94e8b64",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068fd24789230307f",
            "owner_id": "799758650289",
            "tags": {
              "Environment": "dev",
              "Name": "healthcare-dev-vpc",
              "Project": "healthcare"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "healthcare-dev-vpc",
              "Project": "healthcare"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}